[tool.poetry]
name = "chronormu"
version = "0.0.0"
description = ""
authors = ["milkrage"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.*"

[tool.poetry.group.dev.dependencies]
black = "23.*"
isort = "5.*"
flake8 = "6.*"
pre-commit = "^3.6.0"

[tool.isort]
profile = "black"
py_version = 37
line_length = 99

[tool.black]
line-length = 99
target-version = ["py312"]
include = ".py$"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
